--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,59 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{imani2025context,
+  abbr={ICSE},
+  bibtex_show={false},
+  title={Context Conquers Parameters: Outperforming Proprietary LLM in Commit Message Generation},
+  author={Aaron Imani and Iftekhar Ahmed and Mohammad Moshirpour},
+  year={2025},
+  journal={2025 IEEE/ACM 47th International Conference on Software Engineering (ICSE)},
+  abbr={ICSE},
+  keywords = {commit message generation;large language model;llama3;gpt4},
+  pdf={https://arxiv.org/pdf/2408.02502},
+  doi = {10.1109/ICSE55347.2025.00048},
+  selected={true}
 }
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{tafreshipour2025prompting,
+  bibtex_show={false},
+  title={Prompting in the Wild: An Empirical Study of Prompt Evolution in Software Repositories},
+  author={Tafreshipour, Mahan and Imani, Aaron and Huang, Eric and Almeida, Eduardo and Zimmermann, Thomas and Ahmed, Iftekhar},
+  journal={2025 IEEE/ACM 22nd International Conference on Mining Software Repositories (MSR)},
+  abbr={MSR},
+  year={2025},
+  selected={true}
 }
+@INPROCEEDINGS{salmani2022intelligent,
+  bibtex_show={false},
+  author={Salmani, Ali and Imani, Alireza and Bahrehvar, Majid and Duffett-Leger, Linda and Moshirpour, Mohammad},
+  abbr={CCECE},
+  booktitle={2022 IEEE Canadian Conference on Electrical and Computer Engineering (CCECE)}, 
+  title={An Intelligent Methodology to Enhance Requirements Engineering in Multidisciplinary Projects}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={452-457},
+  keywords={Decision making;Estimation;Medical services;Software;Planning;Stakeholders;Requirements engineering;Multidisciplinary;Agile methodology;Requirements Engineering;Process Mining;Effort Estimation},
+  doi={10.1109/CCECE49351.2022.9918286}}
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
+@INPROCEEDINGS{salmani2022data,
+  bibtex_show={false},
+  author={Salmani, Ali and Imani, Alireza and Bahrehvar, Majid and Duffett-Leger, Linda and Moshirpour, Mohammad},
+  booktitle={2022 IEEE International Conference on Systems, Man, and Cybernetics (SMC)}, 
+  title={A Data-Centric Approach to Evaluate Requirements Engineering in Multidisciplinary Projects}, 
+  year={2022},
+  abbr={SMC},
+  volume={},
+  number={},
+  pages={903-908},
+  keywords={Productivity;Collaboration;Medical services;Software;Requirements engineering;Stakeholders;Task analysis;Multidisciplinary;Agile methodology;Requirements Engineering;Process Mining},
+  doi={10.1109/SMC53654.2022.9945270}}
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
-}
+@INPROCEEDINGS{imani2021checklist,
+  bibtex_show={false},
+  author={Imani, Alireza and Moshirpour, Mohammad and Belostotski, Leonid},
+  booktitle={2021 International Conference on Information Systems and Advanced Technologies (ICISAT)}, 
+  title={Checklist-based Software Quality Evaluation of Tango Controls}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={1-7},
+  keywords={Systematics;Software architecture;Optimized production technology;Software quality;Programming;Control systems;Software reliability;control system;open-source software;evaluation;framework analysis;software quality},
+  doi={10.1109/ICISAT54145.2021.9678411}}
