Shrink social icons

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,8 @@
   abbr={ICSE},
   keywords = {commit message generation;large language model;llama3;gpt4},
   pdf={https://arxiv.org/pdf/2408.02502},
+  arxiv={2408.02502},
+  code={https://github.com/aaron-imani/omega},
   doi = {10.1109/ICSE55347.2025.00048},
   selected={true}
 }
@@ -16,6 +18,8 @@
   title={Prompting in the Wild: An Empirical Study of Prompt Evolution in Software Repositories},
   author={Tafreshipour, Mahan and Imani, Aaron and Huang, Eric and Almeida, Eduardo and Zimmermann, Thomas and Ahmed, Iftekhar},
   journal={2025 IEEE/ACM 22nd International Conference on Mining Software Repositories (MSR)},
+  pdf={https://arxiv.org/pdf/2412.17298},
+  arxiv={2412.17298},
   abbr={MSR},
   year={2025},
   selected={true}
