Add citation count for all publications; Small changes to about page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,6 +38,7 @@
   volume={},
   number={},
   pages={452-457},
+  google_scholar_id={d1gkVwhDpl0C},
   keywords={Decision making;Estimation;Medical services;Software;Planning;Stakeholders;Requirements engineering;Multidisciplinary;Agile methodology;Requirements Engineering;Process Mining;Effort Estimation},
   doi={10.1109/CCECE49351.2022.9918286}}
 
@@ -51,6 +52,7 @@
   volume={},
   number={},
   pages={903-908},
+  google_scholar_id={9yKSN-GCB0IC},
   keywords={Productivity;Collaboration;Medical services;Software;Requirements engineering;Stakeholders;Task analysis;Multidisciplinary;Agile methodology;Requirements Engineering;Process Mining},
   doi={10.1109/SMC53654.2022.9945270}}
 
@@ -63,5 +65,6 @@
   volume={},
   number={},
   pages={1-7},
+  google_scholar_id={u5HHmVD_uO8C},
   keywords={Systematics;Software architecture;Optimized production technology;Software quality;Programming;Control systems;Software reliability;control system;open-source software;evaluation;framework analysis;software quality},
   doi={10.1109/ICISAT54145.2021.9678411}}
