--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,6 +26,7 @@
   abbr={MSR},
   year={2025},
   selected={true},
+  preview={MSR2025.jpg},
   google_scholar_id={M3ejUd6NZC8C}
 }
 @INPROCEEDINGS{salmani2022intelligent,
@@ -52,6 +53,7 @@
   volume={},
   number={},
   pages={903-908},
+  preview={SMC2022.jpg},
   google_scholar_id={9yKSN-GCB0IC},
   keywords={Productivity;Collaboration;Medical services;Software;Requirements engineering;Stakeholders;Task analysis;Multidisciplinary;Agile methodology;Requirements Engineering;Process Mining},
   doi={10.1109/SMC53654.2022.9945270}}
