Fix SMG preview extension

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,7 +53,7 @@
   volume={},
   number={},
   pages={903-908},
-  preview={SMC2022.jpg},
+  preview={SMC2022.png},
   google_scholar_id={9yKSN-GCB0IC},
   keywords={Productivity;Collaboration;Medical services;Software;Requirements engineering;Stakeholders;Task analysis;Multidisciplinary;Agile methodology;Requirements Engineering;Process Mining},
   doi={10.1109/SMC53654.2022.9945270}}
